// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`character-after-closing-tokens.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ page.title
}} a

---

{%
 if user
%} Hello, {{ user }}!
{% endif %}

=====================================output=====================================
{{ page.title
 a

---

{%
 if user
 Hello, {{ user }}! {% endif %}

================================================================================
`;

exports[`character-after-closing-tokens.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ page.title
}} a

---

{%
 if user
%} Hello, {{ user }}!
{% endif %}

=====================================output=====================================
{{ page.title
 a

---

{%
 if user
 Hello, {{ user }}!
{% endif %}

================================================================================
`;

exports[`example-1.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %}
{% js userscripts %}

{{ foo
multiline
where does it end }}

=====================================output=====================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %} {% js userscripts %}

{{ foo
multiline
where does it end }}

================================================================================
`;

exports[`example-1.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %}
{% js userscripts %}

{{ foo
multiline
where does it end }}

=====================================output=====================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %}
{% js userscripts %}

{{ foo
multiline
where does it end }}

================================================================================
`;

exports[`example-2.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
# linebreak after opening brace

{

---

# including empty lines

{{ foo

bar   baz

qux }}

---

# line break after %

{% foo %

bar  baz %}

=====================================output=====================================
# linebreak after opening brace

{

---

# including empty lines

{{ foo

bar baz

qux }}

---

# line break after %

{% foo %

bar baz %}

================================================================================
`;

exports[`example-2.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# linebreak after opening brace

{

---

# including empty lines

{{ foo

bar   baz

qux }}

---

# line break after %

{% foo %

bar  baz %}

=====================================output=====================================
# linebreak after opening brace

{

---

# including empty lines

{{ foo

bar baz

qux }}

---

# line break after %

{% foo %

bar baz %}

================================================================================
`;

exports[`issue-19386.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ rule({
    categories: {
    }
}) }}

=====================================output=====================================
{{ rule({
    categories: {
    }
}) }}

================================================================================
`;

exports[`issue-19386.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ rule({
    categories: {
    }
}) }}

=====================================output=====================================
{{ rule({
    categories: {
    }
}) }}

================================================================================
`;

exports[`issue-19488.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
{{% blocks/cover
title="Welcome"
%}}

This input uses Hugo shortcode. Prettier doesn't support this explicitly but it shouldn't break it either.

{{% /blocks/cover %}}

=====================================output=====================================
{{% blocks/cover
title="Welcome"
%}}

This input uses Hugo shortcode. Prettier doesn't support this explicitly but it
shouldn't break it either.

{{% /blocks/cover %}}

================================================================================
`;

exports[`issue-19488.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{% blocks/cover
title="Welcome"
%}}

This input uses Hugo shortcode. Prettier doesn't support this explicitly but it shouldn't break it either.

{{% /blocks/cover %}}

=====================================output=====================================
{{% blocks/cover
title="Welcome"
%}}

This input uses Hugo shortcode. Prettier doesn't support this explicitly but it shouldn't break it either.

{{% /blocks/cover %}}

================================================================================
`;

exports[`unbalanced-mismatched-braces.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================

Braces {%  doesn't    match so   these   words should not   be   considered as *liquid node* }}

=====================================output=====================================
Braces {% doesn't match so these words should not be considered as _liquid node_
}}

================================================================================
`;

exports[`unbalanced-mismatched-braces.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================

Braces {%  doesn't    match so   these   words should not   be   considered as *liquid node* }}

=====================================output=====================================
Braces {% doesn't match so these words should not be considered as _liquid node_ }}

================================================================================
`;

exports[`unbalanced-object-close-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* }}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid
node_ }}

================================================================================
`;

exports[`unbalanced-object-close-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* }}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid node_ }}

================================================================================
`;

exports[`unbalanced-object-open-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================


This brace {{ doesn't   close  so these words    should not be   considered as *liquid node*

=====================================output=====================================
This brace {{ doesn't close so these words should not be considered as _liquid
node_

================================================================================
`;

exports[`unbalanced-object-open-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================


This brace {{ doesn't   close  so these words    should not be   considered as *liquid node*

=====================================output=====================================
This brace {{ doesn't close so these words should not be considered as _liquid node_

================================================================================
`;

exports[`unbalanced-template-close-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* %}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid
node_ %}

================================================================================
`;

exports[`unbalanced-template-close-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* %}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid node_ %}

================================================================================
`;

exports[`unbalanced-template-open-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================


This brace {% doesn't   close  so these words    should not be   considered as *liquid node*

=====================================output=====================================
This brace {% doesn't close so these words should not be considered as _liquid
node_

================================================================================
`;

exports[`unbalanced-template-open-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================


This brace {% doesn't   close  so these words    should not be   considered as *liquid node*

=====================================output=====================================
This brace {% doesn't close so these words should not be considered as _liquid node_

================================================================================
`;
